GUIstyle.css
.guiScreen {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}
.guiScreen.poker {
	background: green;
}
.deck {
	display: flex;
	flex-direction: row;
	flex-wrap: no-wrap;
	justify-content: center;
	align-items: center;
	width: 100%;
	
	height: 25%;
}

.card {
	/*width: auto;*/
	flex-grow: 0;
	flex-shrink: 1;
	min-width: 0px;
	max-width: min-content;
	/*height: 80%;*/
}
.card:last-child {
	flex-shrink: 0;
	min-width: min-content;
	/* for safari*/
	min-width: -webkit-min-content;
}
.card img {
	height: 20vh;
}
.deck.top {
	width: auto;
}
.deck.poolDeck {
	order: 50;
}
.deck.top img {
	border-bottom-style: solid;
	border-right-style: solid;
	border-width: 5px;
	border-color: darkslategray;
}
.deck.main.top img {
	border-style: none;
}
.deck.outDeck {
	width: 50%;
	order: 51;
	/*background: turquoise;*/
	margin-left: 10px;
}
.deck.outDeck .card {
	min-width: 0px;
	width: 0px;
}
.deck.outDeck:hover .card {
	max-width: 2%;
	width: auto;
	min-width: 0px;
}
.deck.outDeck .card:last-child, .deck.outDeck:hover .card:hover {
	min-width: auto;
	width: auto;
	max-width: 100%;
	/* for safari*/
	min-width: -webkit-max-content;
}
.view0 {
	order: 99;
}
.view1, .view2, .view3 {
	order: 1;
}
[playerNumber="3"] .view1, [playerNumber="3"] .view2 {
	width: calc(45% - 2vw);
	padding: 2vw;
}
[playerNumber="2"] .view2, [playerNumber="2"] .view3, [playerNumber="3"] .view3 {
	display: none;
}
[playerNumber="4"] .view1, [playerNumber="4"] .view2, [playerNumber="4"] .view3 {
	width: calc(30% - 2vw);
	padding: 2vw;
}

.option {
	outline-style: solid;
	outline-color: lightgray;
	cursor: pointer;
}
.option:hover {
	outline-color: yellow;
}

.message {
	position: fixed;
	top: 0px;
	left: 30vw; /* HOW TO MAKE IT CENTER ? */
	height: 20vh;
	min-height: 20px;
	max-height: 50px;
	width: 40vw;
	min-width: 200px;
	max-width: 500px;
	z-index: 1000;
	background: rgba(250,255,255,0.9);
	display: flex;
	justify-content: center;
	align-items: center;
	transition-property: top;
	transition-duration: 1s;
	transition-timing-function: ease-out;
}
.message.hidden {
	top: -50px;
	transition-property: top;
	transition-duration: 1s;
	transition-timing-function: ease-out;
}
.anchor {
	height: 0;
	width : 0;
}
.anchor.playerLabelAnchor {
	position: relative;
	top: 10vh; /*half of the card height*/
	/*overflow: visible;*/
}
.playerLabel {
	width: min-content;
	background: rgba(250,255,255,0.9);
}

